# krpc

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh
docs/: 项目问题.md
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  user.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluser.cc  calluserservice.cc  measure.cc
include/: krpcapplication.h  krpcchannel.h  krpccontroller.h  krpcprovider.h  lockqueue.h
lib/include/: krpcchannel.h  krpcconnectionpool.h  krpcprovider.h  logger.h  zookeeperutil.h
src/: CMakeLists.txt  kprcprovider.cc  krpcapplication.cc  krpcchannel.cc  krpcconfig.cc  krpcconnectionpool.cc  krpccontroller.cc  krpcheader.pb.cc  krpcheader.pb.h  krpcheader.proto  krpcprovider.cc  logger.cc  zookeeperutil.cc
src/include/: krpcapplication.h  krpcconfig.h  krpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
